--- a/DSA_CaseStudy1.ipynb
+++ b/DSA_CaseStudy1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMJh4wE5RyTZFMCHcrQ0l1a",
+      "authorship_tag": "ABX9TyOzaa++ngeCdAvbLXKklhV4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 4,
       "metadata": {
         "id": "yTkhjUFshku8"
       },
@@ -49,6 +49,7 @@
         "  global account_bal\n",
         "  account_bal += amount\n",
         "  print(f\"Deposited {amount}, Current balance is {account_bal}\")\n",
+        "  return account_bal\n",
         "\n",
         "def withdraw(amount):\n",
         "  global account_bal\n",
@@ -56,51 +57,35 @@
         "    print(\"insufficent balance\")\n",
         "  else:\n",
         "    account_bal -= amount\n",
-        "    print(f\"Withdrawn:{amount}, Available balance is {account_bal}\")\n"
+        "    print(f\"Withdrawn:{amount}, Available balance is {account_bal}\")\n",
+        "\n",
+        "def check_bal():\n",
+        "  print(f\"Account Balance : {account_bal}\")\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "deposit(1000)"
+        "deposit(1000)\n",
+        "withdraw(500)\n",
+        "check_bal()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "CamD6wWKpSE5",
-        "outputId": "43cc22c9-c807-4711-a109-f2cb24c4cba1"
+        "outputId": "5e60eb5f-ec21-45c3-8b47-14f712a65217"
       },
-      "execution_count": 89,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Deposited 1000, Current balance is 1100\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "withdraw(500)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "46UM8KL2qSnW",
-        "outputId": "7f127e65-cd39-4d89-a881-c0b17f5b5fd2"
-      },
-      "execution_count": 90,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Withdrawn:500, Available balance is 600\n"
+            "Deposited 1000, Current balance is 3500\n",
+            "Withdrawn:500, Available balance is 3000\n",
+            "Account Balance : 3000\n"
           ]
         }
       ]
@@ -128,36 +113,37 @@
         "elif 15 <= temp <= 24:\n",
         "  print('normal')\n",
         "else:\n",
-        "  print('cold')\n"
+        "  print('cold')\n",
+        "\n",
+        "total_temp = [28,29,30,31,31,33,34]\n",
+        "\n",
+        "def avg_temp(total_temp):\n",
+        "  print(sum(total_temp) / len(total_temp))\n",
+        "\n",
+        "avg_temp(total_temp)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2tpTp65LyNcC",
-        "outputId": "e1dd7b74-2d77-4d70-c0cb-e636e318b01d"
+        "outputId": "5dcc6c3f-d3f5-4b98-ed9d-0a5e60d50733"
       },
-      "execution_count": 92,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "normal\n"
+            "normal\n",
+            "30.857142857142858\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "total_temp = [28,29,30,31,31,33,34]\n",
-        "\n",
-        "def avg_temp(total_temp):\n",
-        "  print(sum(total_temp) / 7)\n",
-        "\n",
-        "avg_temp(total_temp)"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -165,7 +151,7 @@
         "id": "wSHE2Dwtz6ga",
         "outputId": "3e8e3bca-67c8-479a-c772-8277e6e89c06"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
